Added cover property to background image

--- a/a2/style.css
+++ b/a2/style.css
@@ -2,6 +2,7 @@
 
 body {
     background-image: url("https://3.bp.blogspot.com/-aNRb0w9Uu2E/Uk0w1v9lXjI/AAAAAAAAHrM/RipxfZqlQQ4/s1600/Texture-Backgrounds-Wallpaper-HD.jpg");
+    background-size: cover;
 }
 #title {
     position: fixed;
