--- a/a2/style.css
+++ b/a2/style.css
@@ -57,7 +57,7 @@ img {
     border: 1px solid black;
     width: 10%;
     height: 60px;
-    background-color: #D4A373;
+    background-color: #787878;
     float: left;
 }
 
@@ -66,7 +66,8 @@ img {
 }
 
 #footer {
-    border: solid 1px;
+    background-color: #D4A373;
+    /*border: solid 1px; Commenting out in lieu of background color */
     padding: 10px;
     margin: 10px;
 }
