--- a/a2/style.css
+++ b/a2/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 header {
-    background-color: #CCD5AE; /*-- Working with this palette: https://coolors.co/palette/ccd5ae-e9edc9-fefae0-faedcd-d4a373 --*/
     padding: 10px;
     margin: 10px;
 }
@@ -23,7 +22,7 @@ img {
     padding: 10px;
     margin: 0px;
     width: 100%;
-    background-color: #62C2CE;
+    background-color: #CCD5AE;
     text-align: center;
     z-index: 10;
     font-family: 'UglyTypist';
