Added new background image

--- a/a2/style.css
+++ b/a2/style.css
@@ -1,7 +1,7 @@
 /*-- Chessboard Styles --*/
 
 body {
-    background-image: url("https://3.bp.blogspot.com/-aNRb0w9Uu2E/Uk0w1v9lXjI/AAAAAAAAHrM/RipxfZqlQQ4/s1600/Texture-Backgrounds-Wallpaper-HD.jpg");
+    background-image: url("/images/annie-spratt-xt79nQxc9Q0-unsplash.jpg");
     background-size: cover;
 }
 img {
