--- a/a2/style.css
+++ b/a2/style.css
@@ -48,7 +48,7 @@ float: left;
 .black{
 width: 10%;
 height: 60px;
-background-color: #FFFFFF; /* TODO: Add Footer Background Color */
+background-color: #787878;
 float: left;
 }
 
@@ -87,4 +87,5 @@ clear: both;
 border: solid 1px;
 padding: 10px;
 margin: 10px;
+background-color: #888888; /* TODO: Add Footer Background Color */
 }
