--- a/a2/style.css
+++ b/a2/style.css
@@ -1,7 +1,9 @@
 /* COLOR PALETTE: https://colorhunt.co/palette/faf7f0d8d2c2b174574a4947 */
 
 body {
-background-image:url("#"); /* Add background image here */
+background-image:url(images/pexels-hngstrm-1939485.jpg); /* Add background image here */
+background-position: right top;
+background-repeat: repeat;
 background-size: cover; /* Stretches background image to full viewport */
 }
 
