--- a/a2/style.css
+++ b/a2/style.css
@@ -1,13 +1,13 @@
-/* COLOR PALETTE: https://colorhunt.co/palette/faf7f0d8d2c2b174574a4947 */
+/* AV: COLOR PALETTE: https://colorhunt.co/palette/faf7f0d8d2c2b174574a4947 */
 
 body {
 background-image:url(images/pexels-hngstrm-1939485.jpg); /* Add background image here */
 background-position: right top;
-background-size: cover; /* Stretches background image to full viewport */
+background-size: cover; /* AV: Stretches background image to full viewport */
 }
 
 
-/* Header/Title Styles */
+/* AV: Header/Title Styles */
 
 header 
 {
@@ -25,7 +25,7 @@ header
 #title 
 {
 margin: 15px 0;
-font-family: 'RobotoRegular'; /* Imported font from OpenFontLibrary */
+font-family: 'RobotoRegular'; /* AV: Imported font from OpenFontLibrary */
 color: #b45910;
 font-weight: bold;
 font-style: normal;
@@ -33,7 +33,7 @@ font-size: 36px;
 }
 
 
-/*Container Layout Styles*/
+/* AV: Container Layout Styles*/
 
 #container 
 {
@@ -44,7 +44,7 @@ margin-bottom: 5%;
 }
 
 
-/* Row and Tile Styles */
+/* AV: Row and Tile Styles */
 
 .white
 {
@@ -76,10 +76,10 @@ float: left;
 }
 
 
-/* NOTE: This applies a single top and left border to each element, then a bottom and right border to the last tile of each row */
-/* This fixes the '2px border' overlap you see in adjacent tiles */
+/* AV: NOTE: This applies a single top and left border to each element, then a bottom and right border to the last tile of each row */
+/* AV: This fixes the '2px border' overlap you see in adjacent tiles */
 .row > div {
-    width: calc(12.5% - 1.125px); /* Centers the board by splitting up elements roughly 100/8. This includes a 1.125px buffer for the borders. */
+    width: calc(12.5% - 1.125px); /* AV: Centers the board by splitting up elements roughly 100/8. This includes a 1.125px buffer for the borders. */
     border-top: 1px solid black;
     border-left: 1px solid black;
 }
@@ -88,17 +88,17 @@ float: left;
     border-right: 1px solid black;
 }
 
-/* This applies a bottom border to the last row of tiles */
+/* AV: This applies a bottom border to the last row of tiles */
 #container > .row:last-child div {
     border-bottom: 1px solid black;
 }
 
-/* Clearfix */
+/* AV: Clearfix */
 .clear {
 clear: both;
 }
 
-/* Footer Styles */
+/* AV: Footer Styles */
 #footer {
 border: solid 1px;
 padding: 10px;
