--- a/a2/style.css
+++ b/a2/style.css
@@ -101,6 +101,7 @@ clear: both;
 #footer {
 border: solid 1px;
 padding: 10px;
-margin: 10px;
+margin: 0px;
 background-color: #888888; /* TODO: Add Footer Background Color */
+text-align: center;   
 }
