--- a/m04/style.css
+++ b/m04/style.css
@@ -13,6 +13,12 @@ body {
   overflow: auto;
 }
 
+#header h1 {
+  font-family: 'RedkostComicRegular';
+  font-weight: normal;
+  font-style: normal;
+}
+
 #nav, #feature, #footer {
   margin: 1%;
 }
