Background image - upload and apply

--- a/m04/style.css
+++ b/m04/style.css
@@ -7,6 +7,8 @@
 body {
   width: 90%;
   margin: 0 auto;
+  background-image: url('images/bharath-g-s-aLGiPJ4XRO4-unsplash.jpg');
+  background-size: cover;
 }
 
 #content {
