--- a/m05/css/style.css
+++ b/m05/css/style.css
@@ -1,6 +1,6 @@
 /*-- Imported from: https://javascriptbook.com/code/c04/css/c04.css --*/
 
-@import url(http://fonts.googleapis.com/css?family=Wellfleet);
+@import url(https://fonts.googleapis.com/css?family=Wellfleet);
 
 body {
 	background-color: #523620;
