Stylesheet syntax error: 66

--- a/m04/style.css
+++ b/m04/style.css
@@ -62,7 +62,7 @@ li {
   background-image: url("images/bhill-transparent.png");
   background-size:contain;
   background-position: right;
-  background-repeat:no-repeat;}
+  background-repeat:no-repeat;
 }
 
 .column1 {
