--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -1,1 +1,15 @@
 /*-- a3 Styles --*/
+
+#wrapper {
+    margin: 5% 10%;
+}
+
+#shapeForm {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px
+    padding: 15px 25px;
+    border: 1px solid #666;
+    border-radius: 5px;
+    box-shadow: 2px 3px 5px;
+}
