--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -7,7 +7,7 @@
 #shapeForm {
     margin-left: auto;
     margin-right: auto;
-    max-width: 350px
+    max-width: 350px;
     padding: 15px 25px;
     border: 1px solid #666;
     border-radius: 5px;
