--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -8,8 +8,19 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 350px;
-    padding: 15px 25px;
+    padding: 25px 40px;
     border: 1px solid #666;
     border-radius: 5px;
-    box-shadow: 2px 3px 5px;
+    box-shadow: 2px 3px 10px;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+input, select {
+    display: inline-block;
+    margin-bottom: 15px;
+    min-width: 30%;
 }
