--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -23,4 +23,7 @@ input, select {
     display: inline-block;
     margin-bottom: 15px;
     min-width: 30%;
+    font-family: 'FreeUniversalRegular';
+    font-weight: normal;
+    font-style: normal;
 }
