--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -4,6 +4,12 @@
     margin: 5% 10%;
 }
 
+#header {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px;
+}
+
 #shapeForm {
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +23,7 @@
 label {
     display: inline-block;
     margin-bottom: 5px;
-    font-family: 'FreeUniversalRegular';
+    font-family: 'AvrileSansUIRegular';
     font-weight: normal;
     font-style: normal;
 }
