--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -37,3 +37,25 @@
   .page-body p {
     border: 1px solid grey;
   }
+
+  /*-- Menu Styles --*/
+
+.header-content {
+    display: inline-block;
+    text-align: center;
+}
+
+.header-menu {
+    padding-left: 0;
+    margin: 0;
+}
+
+.header-menu ul {
+
+}
+
+.header-menu ul li {
+    display: inline-block;
+    margin-right: 10px;
+    padding: 10px 15px;
+}
