--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -64,8 +64,11 @@
 
 }
 
-.header-menu ul li a {
+.header-menu ul li {
     display: inline-block;
+}
+
+.header-menu ul li a {
     margin-right: 10px;
     padding: 10px 15px;
 }
