--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -95,5 +95,6 @@
     padding: 10px 15px;
     text-decoration: none;
     border-radius: 10px;
-    background-color: #EFEFEF;
+    color: #CCCCCC;
+    background-color: #93C0A4;
 }
