--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -88,7 +88,7 @@
     padding: 10px 15px;
     text-decoration: none;
     border-radius: 10px;
-    color: #93C0A4;
+    color: #8E9B90;
 }
 
 .header-menu ul li a:hover {
@@ -97,5 +97,5 @@
     text-decoration: none;
     border-radius: 10px;
     color: #FFFFFF;
-    background-color: #93C0A4;
+    background-color: #8E9B90;
 }
