--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -51,6 +51,13 @@
 }
 
 .header-content {
+    max-width: 1350px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header-logo {
+    display: inline-block;
 }
 
 /*-- Footer Styles --*/
@@ -62,6 +69,7 @@
 
 .footer p {
     color: black;
+    font-size: 14px;
 }
 
 /*-- Menu Styles --*/
@@ -70,6 +78,7 @@
 .header-menu {
     padding-left: 0;
     margin: 0;
+    float: right;
 }
 
 .header-menu ul {
