--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -17,6 +17,9 @@
     height: 100%;
     font: 1.2em sans-serif;
     margin: 0; /* Clean this up later */
+    font-family: 'OpenSansYtoKRegular';
+    font-weight: normal;
+    font-style: normal;
   }
   
   .container {
