--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -61,6 +61,9 @@
 
 .header-logo {
     display: inline-block;
+    font-family: 'BebasNeueBold';
+    font-weight: normal;
+    font-style: normal;
 }
 
 /*-- Footer Styles --*/
