--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -64,6 +64,7 @@
     font-family: 'BebasNeueBold';
     font-weight: normal;
     font-style: normal;
+    color: #8E9B90;
 }
 
 /*-- Footer Styles --*/
