--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -38,7 +38,7 @@
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 15px;
+    padding: 50px 15px;
   }
   
   .header,
