--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -27,6 +27,7 @@ h1, h2, h3 {
   font-weight: normal;
   font-style: normal;
   margin-bottom: 10px;
+  color: #666666;
 }
 
 h1 {
@@ -39,6 +40,10 @@ h2 {
 
 h3 {
   font-size: 36px;
+}
+
+p {
+  color: #666666;
 }
 
 .container {
