--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -99,7 +99,7 @@ h3 {
 
 .header-logo span {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 /*-- Footer Styles --*/
@@ -119,7 +119,7 @@ h3 {
 
 .header-menu {
     padding-left: 0;
-    margin: 0;
+    margin: 12px 0 0 0;
     float: right;
 }
 
