--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -17,7 +17,7 @@ body {
   height: 100%;
   font: 1.2em sans-serif;
   margin: 0; /* Clean this up later */
-  font-family: 'OpenSansYtoKRegular';
+  font-family: 'SelawikRegular';
   font-weight: normal;
   font-style: normal;
 }
