--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -153,8 +153,8 @@ h3 {
 .title-underline {
   width: 33%;
   color: #8E9B90;
-  float: left;
   margin-bottom: 50px;
+  display: inline-block;
 }
 
 .wrapper-home {
