--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -164,3 +164,15 @@ h3 {
 .center {
   text-align: center;
 }
+
+.col-2 {
+  float: left;
+  width:48%;
+  margin: 15px 1%;
+}
+
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
