--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -187,3 +187,20 @@ img.featured-image:hover {
   box-shadow: 2px 3px 2px #666;
   transition: all 200ms ease-in-out;
 }
+
+/*-- Form Styles --*/
+
+.form-area {
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+.form-area input, .form-area textarea {
+  width: 100%;
+}
+
+.form-area input[type=submit] {
+  padding: 10px 15px;
+}
