background image styles

--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -52,6 +52,7 @@ h3 {
   grid-template-rows: auto 1fr auto;
   background-image: url('../images/site-bkgd.jpg');
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .wrapper {
