--- a/m07/css/style.css
+++ b/m07/css/style.css
@@ -70,7 +70,7 @@ p + h2 {
   border-bottom: 1px solid #fff; 
   padding: 10px 0;}
 
-#info div:first-child { /*-- pseudo selectors - let's make this dynamic --*/
+#hotel1 { /*-- pseudo selectors - let's make this dynamic --*/
   margin-top: 1em; 
   border-top: 1px solid #fff; 
   padding-top: 1em;}
