--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -20,3 +20,15 @@ input, select {
     color: red;
     font-style: bold;
 }
+
+/*-- Hide Nnmeric input spinners --*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
