--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -19,7 +19,11 @@ body {
 
 input, select {
     display: block;
-    margin-bottom: 10px;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
 }
 
 /*-- Hide numeric input spinners --*/
