--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -15,7 +15,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 15px 25px;
-    border: 1px solid #666;
+    border: 2px solid #C0FDFB;
     border-radius: 5px;
     background-color: #C0FDFB;
     box-shadow: 2px 3px 2px #5D737E;
