--- a/m06/css/style.css
+++ b/m06/css/style.css
@@ -1,6 +1,6 @@
 .single-die {
     max-width: 100px;
-    max-height: 100px;
+    min-height: 100px;
     background-image: url('../images/d20-dice.svg');
     background-size: cover;
 }
