--- a/m06/css/style.css
+++ b/m06/css/style.css
@@ -2,6 +2,7 @@
     max-width: 100px;
     min-height: 100px;
     display: block;
+    position: relative;
     background-image: url('../images/d20-dice.svg');
     background-size: cover;
 }
