--- a/m09/css/style.css
+++ b/m09/css/style.css
@@ -5,6 +5,18 @@ body {
   .dot {
     height: 8px; width: 8px;
     border-radius: 4px; /* rounds corners */
-    background: blue;
+    background: black;
     position: absolute;
+  }
+
+  .blue {
+    background: blue;
+  }
+
+  .green {
+    background: green;
+  }
+
+  .red {
+    background: red;
   }
