--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -6,7 +6,6 @@
 }
 
 .button-wrapper {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    text-align: center;
 }
