--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     max-width: 960px;
     display: block;
     margin-left: auto;
@@ -8,4 +9,13 @@
 .button-wrapper {
     width: 100%;
     text-align: center;
+    position: absolute;
+    bottom: 15px;
+}
+
+#caption {
+    position: absolute;
+    bottom: 10px;
+    left: 25px;
+    font-size: 18px;
 }
