--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 #slideshow {
-    border: 2px solid #2d5194;
+    border: 2px solid #180537;
     border-radius: 15px;
     box-shadow: 2px 3px 2px #333;
 }
