--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -6,6 +6,7 @@ body {
     background-image: linear-gradient(to right top, #180537, #1f194d, #262b64, #2b3d7c, #2d5194);
     background-size: cover;
     min-height: 100%;
+    color: #ccc;
 }
 
 .container {
@@ -26,7 +27,7 @@ body {
     width: 100%;
     text-align: center;
     position: absolute;
-    bottom: 25px;
+    bottom: 45px;
 }
 
 .button-wrapper button {
