--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -7,6 +7,9 @@ body {
     background-size: cover;
     min-height: 100%;
     color: #ccc;
+    font-family: 'AvrileSansUIRegular';
+    font-weight: normal;
+    font-style: normal;
 }
 
 .container {
@@ -39,4 +42,5 @@ body {
     bottom: 10px;
     left: 25px;
     font-size: 18px;
+    background: linear-gradient(to bottom,  rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 0) 100%); /* W3C */
 }
