--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -38,9 +38,7 @@ body {
 }
 
 #caption {
-    position: absolute;
-    bottom: 10px;
-    left: 25px;
+    width: 100%;
+    text-align: center;
     font-size: 18px;
-    background: linear-gradient(to bottom,  rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 0) 100%); /* W3C */
 }
