--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -29,8 +29,6 @@ body {
 .button-wrapper {
     width: 100%;
     text-align: center;
-    position: absolute;
-    bottom: 45px;
 }
 
 .button-wrapper button {
@@ -41,4 +39,8 @@ body {
     width: 100%;
     text-align: center;
     font-size: 18px;
+}
+
+.run-auto {
+    float: right;
 }
