--- a/a5/css/style.css
+++ b/a5/css/style.css
@@ -26,7 +26,7 @@ body {
     box-shadow: 2px 3px 2px #333;
 }
 
-.button-wrapper {
+.button-wrapper, .validators {
     width: 100%;
     text-align: center;
 }
