--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -62,3 +62,8 @@ input[type=number] {
     font-weight: bold;
     font-size: 12px;
 }
+
+.validators {
+    text-align: center;
+    margin-top: 25px;
+}
